# anything-voice

./: .gitignore  README.md  UNIFICATION_PLAN.md
FluidVoice/: .gitignore  (+1 more)
anarlog/crates/aec/: Cargo.toml
anarlog/crates/aec/benches/: aec_bench.rs
anarlog/crates/aec/examples/: audacity.rs
anarlog/crates/aec/src/: error.rs
anarlog/crates/aec/src/onnx/: mod.rs
anarlog/crates/agent-core/: Cargo.toml
anarlog/crates/agent-core/src/: health.rs  install.rs  lib.rs  types.rs
anarlog/crates/agent-core/src/provider/: claude.rs  codex.rs  mod.rs  opencode.rs
anarlog/crates/analytics/: Cargo.toml
anarlog/crates/analytics/src/: error.rs  lib.rs
anarlog/crates/api-calendar/: Cargo.toml
anarlog/crates/api-calendar/src/: error.rs  lib.rs  openapi.rs
anarlog/crates/api-calendar/src/google/: mod.rs  routes.rs
anarlog/crates/api-calendar/src/outlook/: routes.rs
anarlog/crates/api-claw/: AGENTS.md  Cargo.toml
anarlog/crates/api-claw/src/: keyring.rs  lib.rs  manager.rs  naming.rs
anarlog/crates/api-pyannote/: Cargo.toml
anarlog/crates/api-pyannote/src/: config.rs  error.rs  lib.rs  openapi.rs  request.rs  routes.rs
anarlog/crates/api-research/: Cargo.toml
anarlog/crates/api-research/assets/: research_chat.md.jinja
anarlog/crates/api-research/src/: config.rs  lib.rs  routes.rs  state.rs
anarlog/crates/api-research/src/mcp/: mod.rs  server.rs
anarlog/crates/api-research/src/mcp/prompts/: mod.rs
anarlog/crates/api-research/src/mcp/tools/: get_contents.rs  mod.rs  read_url.rs  search.rs
anarlog/crates/api-sync/: Cargo.toml
anarlog/crates/api-sync/src/: config.rs  error.rs  lib.rs  state.rs
anarlog/crates/api-sync/src/routes/: mod.rs
anarlog/crates/apple-todo/: Cargo.toml
anarlog/crates/apple-todo/src/: error.rs  lib.rs  types.rs
anarlog/crates/apple-todo/src/apple/: handle.rs  mod.rs  recurrence.rs
anarlog/crates/audio-device/: Cargo.toml
anarlog/crates/audio-device/src/: linux.rs  macos.rs
anarlog/crates/audio-mock/: Cargo.toml
anarlog/crates/audio-mock/src/: lib.rs
anarlog/crates/audio-norm/: Cargo.toml
anarlog/crates/audio-norm/src/: encode.rs  error.rs  file_move.rs  lib.rs
anarlog/crates/audio-sync/: Cargo.toml
anarlog/crates/audio-sync/src/: drift.rs  estimator.rs  level.rs  lib.rs  probe.rs
anarlog/crates/audio-sync/tests/: e2e.rs
anarlog/crates/audio-utils/: Cargo.toml
anarlog/crates/audio-utils/src/: error.rs  lib.rs  pcm.rs
anarlog/crates/chatwoot/: Cargo.toml  build.rs  fetch.sh  openapi.gen.json
anarlog/crates/chatwoot/src/: custom_types.rs  lib.rs
anarlog/crates/cli-process/: Cargo.toml
anarlog/crates/cli-process/src/: lib.rs
anarlog/crates/cloudsync/: AGENTS.md  Cargo.toml
anarlog/crates/cloudsync/src/: api.rs  bundle.rs  error.rs  lib.rs  network.rs
anarlog/crates/codex/: Cargo.toml
anarlog/crates/codex/src/: config.rs  error.rs  events.rs  exec.rs  handoff.rs  health.rs  lib.rs  options.rs  output_schema.rs  thread.rs
anarlog/crates/cursor/: Cargo.toml
anarlog/crates/cursor/src/: client.rs  lib.rs  types.rs
anarlog/crates/db-app/: AGENTS.md  Cargo.toml
anarlog/crates/db-app/migrations/: 20260414120000_calendars_events.sql
anarlog/crates/db-app/src/: calendar_ops.rs  calendar_types.rs  cloudsync.rs  event_ops.rs  event_types.rs  template_ops.rs  template_types.rs
anarlog/crates/db-cli/: AGENTS.md  Cargo.toml
anarlog/crates/db-cli/src/: cli.rs  error.rs  lib.rs  output.rs  runtime.rs
anarlog/crates/db-execute/: AGENTS.md  Cargo.toml
anarlog/crates/db-execute/src/: error.rs  lib.rs  query.rs
anarlog/crates/db-migrate/: AGENTS.md  Cargo.toml
anarlog/crates/db-migrate/src/: error.rs  lib.rs  migrate.rs  schema.rs
anarlog/crates/db-migrate/tests/: e2e.rs
anarlog/crates/db-reactive/: AGENTS.md  Cargo.toml
anarlog/crates/db-reactive/src/: error.rs  explain.rs  lib.rs  runtime.rs  schema.rs  subscriptions.rs  types.rs  watch.rs
anarlog/crates/db-reactive/tests/: cloudsync.rs  dependency.rs  resilience.rs  subscribe.rs
anarlog/crates/db-reactive/tests/common/: live_query_test_schema.sql  mod.rs
anarlog/crates/denoise/: Cargo.toml
anarlog/crates/denoise/benches/: denoise_bench.rs
anarlog/crates/denoise/src/onnx/: context.rs  denoiser.rs  error.rs  tests.rs
anarlog/crates/dictation-ui-macos/: Cargo.toml  README.md  build.rs
anarlog/crates/dictation-ui-macos/examples/: manual.rs
anarlog/crates/dictation-ui-macos/src/: lib.rs
anarlog/crates/dictation-ui-macos/swift-lib/: Package.swift
anarlog/crates/dictation-ui-macos/swift-lib/src/: Constants.swift  Models.swift  OverlayManager+Animation.swift  OverlayManager+Creation.swift  OverlayManager.swift  OverlayView.swift  OverlayViewModel.swift  lib.swift
anarlog/crates/embedding/: Cargo.toml
anarlog/crates/embedding/data/snapshots/: embedding_english_1.json  embedding_english_2.json  embedding_korean_1.json
anarlog/crates/embedding/src/: error.rs  lib.rs
anarlog/crates/embedding/src/onnx/: mod.rs  model.rs
anarlog/crates/exedev/: Cargo.toml
anarlog/crates/exedev/assets/: claw-setup.sh
anarlog/crates/exedev/src/: client.rs  commands.rs  error.rs  http_vm.rs  lib.rs  models.rs  token.rs
anarlog/crates/exedev/tests/: live_smoke.rs
anarlog/scripts/: bash-guard.sh  dg.py  dg.sh  jfk.sh  nango.sh  package.json  pyproject.toml  resource.sh  setup-desktop-e2e.sh  setup-devtools.sh  setup-flathub.sh  setup-linux-others.sh  setup-linux.sh  supabase-tunnel-start.sh  supabase-tunnel-stop.sh  version.sh  yabai.sh  yabai_impl.sh
voice-core/: Cargo.toml  askama.toml  build.rs
voice-core/src/: lib.rs
voice-core/src/config/: paths.rs
voice-core/src/intelligence/: llm_client.rs  mod.rs  providers.rs  templates.rs
voice-core/src/intelligence/prompts/: _macros.jinja  activity-capture.user.md.jinja  chat.system.md.jinja  daily-summary.user.md.jinja  enhance.system.md.jinja  enhance.user.md.jinja  title.system.md.jinja  transcript-patch.system.md.jinja
voice-core/src/server/: http.rs  mod.rs
voice-core/src/stt/: downloader.rs  mod.rs  models.rs  streaming.rs  whisper.rs
voice-core/uniffi/: voice_core.udl
(+1595 files in other folders)
