[package]
name = "voice-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uniffi = { version = "0.27", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
askama = { version = "0.12", features = ["with-actix-web"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
sha2 = "0.10"

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
