[package]
name = "aec"
version = "0.1.0"
edition = "2024"

[features]
default = ["onnx", "128"]
onnx = ["dep:hypr-onnx"]
128 = []
256 = []
512 = []

[dependencies]
hypr-onnx = { workspace = true, optional = true }

realfft = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
clap = { workspace = true, features = ["derive"] }
criterion = { workspace = true }
dasp = { workspace = true }
hound = { workspace = true }
hypr-audacity = { workspace = true }
hypr-audio-snapshot = { workspace = true }
hypr-audio-utils = { workspace = true }
rodio = { workspace = true }

[[bench]]
name = "aec_bench"
harness = false
