[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-claude = { workspace = true }
hypr-codex = { workspace = true }
hypr-opencode = { workspace = true }
serde = { workspace = true }
specta = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[features]
specta = ["dep:specta"]
