[package]
name = "api-claw"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hypr-exedev = { workspace = true }

base64 = { workspace = true }
chrono = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
