[package]
name = "api-research"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-exa = { workspace = true }
hypr-jina = { workspace = true }
hypr-mcp = { workspace = true }

axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

askama = { workspace = true }

rmcp = { workspace = true, features = ["server"] }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
