[package]
name = "api-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-api-error = { workspace = true }
hypr-supabase-auth = { workspace = true, features = ["server"] }

utoipa = { workspace = true }

axum = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sentry = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
