[package]
name = "audio-norm"
version = "0.1.0"
edition = "2024"

[dependencies]
audioadapter-buffers = "2.0"
hypr-afconvert = { workspace = true }
hypr-audio-utils = { workspace = true }
hypr-mp3 = { workspace = true }
hypr-resampler = { workspace = true }

rodio = { workspace = true, features = ["symphonia-all"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_fs = "1"
hypr-data = { workspace = true }
