[package]
name = "cli-process"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
