[package]
name = "codex"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = { workspace = true }
futures-util = { workspace = true }
hypr-cli-process = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
