[package]
name = "db-app"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-db-core = { workspace = true }
hypr-db-migrate = { workspace = true }

sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled", "macros"] }

[features]
default = []
cli = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
