[package]
name = "db-migrate"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-db-core = { workspace = true }

sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled", "migrate"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
