[package]
name = "db-reactive"
version = "0.1.0"
edition = "2024"

[features]
specta = ["dep:specta"]

[dependencies]
hypr-db-change = { workspace = true }
hypr-db-core = { workspace = true }
hypr-db-execute = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, optional = true, features = ["serde_json"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
hypr-cloudsync = { workspace = true }
hypr-db-migrate = { workspace = true }

anyhow = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
