[package]
name = "embedding"
version = "0.1.0"
edition = "2024"

[features]
default = ["onnx"]
onnx = ["dep:hypr-onnx", "dep:knf-rs"]
coreml = ["onnx", "hypr-onnx/coreml"]
directml = ["onnx", "hypr-onnx/directml"]

[dependencies]
hypr-onnx = { workspace = true, optional = true }
knf-rs = { git = "https://github.com/thewh1teagle/pyannote-rs", rev = "e23bd29", package = "knf-rs", optional = true }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
hypr-data = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
