[package]
name = "exedev"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shell-escape = "0.1"
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519"] }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = { workspace = true, features = ["rt", "macros"] }
